<resources>
    <string name="app_name">GradingApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select One</string>
    <string name="newClass">Create New Class</string>
    <string name="Google">Google</string>
    <string name="ClassName">Class Name</string>
    <string name="ClassSem">Semester</string>
    <string name="ClassYear">Year</string>
    <string name="Submit">Submit</string>
    <string name="Delete">Delete Class</string>
</resources>
